--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,7 @@
+@import url("./Gilroy Font/stylesheet.css");
+
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: 'Gilroy';
   line-height: 1.5;
   font-weight: 400;
 
@@ -31,6 +33,7 @@ body {
   margin: 0;
   min-width: 320px;
   min-height: 100vh;
+  overflow-x: hidden;
 }
 
 h1 {
@@ -52,15 +55,63 @@ button {
 
 .Footer {
   position: absolute;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    height:100px;
-    margin: 0 6em 3em 6em;
+  display: flex;
+  justify-content: space-around;
+  bottom: 0;
+  left: 1px;
+  right: 0;
+  width: 100%;
+  height: 367px;
+  font-weight: 400;
+  font-size: 16px;
+}
+
+svg {
+  translate: 0 2px;
+  transform: scale(1.25);
+  padding-right: 8px;
 }
 
 .Card1 {
-  
+  width: 249px;
+  height: 237px;
+  font-weight: 400;
+  color: #616161;
+}
+
+.Card2 {
+  width: 104px;
+  height: 229px;
+  font-weight: 400;
+  color: #616161;
+}
+
+.Card3 {
+  width: 93px;
+  height: 189px;
+  font-weight: 400;
+  color: #616161;
+}
+
+.Card4 {
+  width: 180px;
+  height: 151px;
+  font-weight: 400;
+  color: #616161;
+}
+
+.Card5 {
+  width: 292px;
+  height: 90px;
+  font-weight: 400;
+  color: #616161;
+}
+
+.SmallHead {
+  font-weight: 700;
+  font-size: 24px;
+  color: #000000;
+  margin-bottom: -1px;
 }
 
 @media (prefers-color-scheme: light) {
