--- a/src/index.css
+++ b/src/index.css
@@ -127,11 +127,14 @@ input[type=text] {
   width: 242px;
   height: 45px;
   background-color: #F4F5F7;
+  color: #000000;
   border: none;
+  text-indent: 12px;
+  font-size: 16px;
+  font-weight: 400;
 }
 
 ::placeholder {
-  padding-left: 20px;
   font-size: 16px;
   font-weight: 400;
   color: #828282;
